--- a/css/style.css
+++ b/css/style.css
@@ -92,16 +92,18 @@ html {
 }
 /* Banner section */
 .hero {
+  margin: 0;
   display: flex;
   padding-top: 20px;
 }
 .heroleft img {
   width: 400px;
   height: 450px;
+  margin: 0;
 }
 .heroright {
   padding-left: 60px;
-  padding-top: 100px;
+  padding-top: 90px;
 }
 .heroright h1 {
   font-size: 70pt;
@@ -317,7 +319,7 @@ html {
   background-color: #f2f2f2;
   display: flex;
   justify-content: space-between;
-  padding: 30px 10px;
+  padding: 30px 30px;
 }
 /* Utilitise class for genaral use */
 .container {
