Change color of copyright section

--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ html {
   display: flex;
   justify-content: space-between;
   padding: 30px 30px;
+  color: #878787;
 }
 /* Utilitise class for genaral use */
 .container {
